# b3_insights

./: .env.example  .gitignore  .gitlab-ci.yml  DEPLOY.md  Dockerfile  LICENSE  PLANO-INFRA.md  README.en.md  README.md  buildspec.yml  pyproject.toml
dashboard/: server.py
dashboard/static/: index.html  modelo.html  prever.html  treino.html
infra/: radar-b3.service  s3_init.py  setup_ec2.sh
ml/: artefatos.py  config.py  engine.py  loader.py  pipeline.py  rotular.py  scoring.py
ml/artefatos_seed/: modelo_final.joblib
pipeline/: gold_transform.py  silver_transform.py
scraper/: config.py  scraper.py
scripts/: backfill_historico.py  download_pdfs_faltantes.py  fundamentalista.py  market_data.py  upload_s3.py  validar_pipeline.py  worker.py
storage/s3_manager/: __init__.py  manager.py
