[project]
name = "data-science-iv"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "schedule>=1.2.2",
    "pandas>=2.0.0",
    "numpy>=1.26.0",
    "requests>=2.31.0",
    "boto3>=1.34.0",
    "yfinance>=0.2.0",
    "pytz>=2024.1",
    "pyarrow>=15.0.0",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "plotly>=5.18.0",
    "streamlit>=1.32.0",
    "lxml>=5.0.0",
    # ── ML (modelo cascata + telas /treino /prever + self-feeding) ──
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.0",
    "joblib>=1.3.0",
    "openai>=1.30.0",     # rotulagem semanal dos PDFs (gpt-4o-mini)
    "pymupdf>=1.24.0",    # extração de texto dos PDFs
    # nota: ARIMA (pmdarima) é OPCIONAL — sem ela o AR usa só CAPM (degradação
    # documentada no engine). Omitida de propósito p/ não quebrar o build no 3.13.
]

[dependency-groups]
dev = [
    "moto[s3]>=5.1.22",
]
